# Ginseng

./: .biomeignore  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  PARALLEL_IMPLEMENTATION.md  PARALLEL_PROGRESS.md  README.md  SECURITY.md  biome.json  flake.nix  index.html  package.json  tailwind.config.js  vite.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml  static.yml
scripts/: replace-version.cjs
site/: index.html  package.json  vite.config.ts
site/src/: App.tsx  index.css  main.tsx
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  core.rs  iroh.rs  lib.rs  main.rs  progress.rs  state.rs  utils.rs
src-tauri/tests/: process_files.rs
src/components/: DropZone.tsx  FileTransfer.tsx  ParallelProgress.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  sonner.tsx  tabs.tsx
src/types/: progress.ts
