[package]
name = "ginseng"
version = "0.1.0-beta.11"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ginseng"

[[bin]]
name = "ginseng-cli"
path = "src/cli.rs"

[lib]
# The `_lib` suffix is important to avoid name conflicts with the main binary
# (see https://github.com/rust-lang/cargo/issues/8519
name = "ginseng_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
iroh = "0.93.2"
iroh-blobs = "0.95.0"
tokio = "1.48.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
dirs = "5.0"
chrono = "0.4"
