[package]
name = "ginseng"
version = "0.1.0-alpha.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ginseng"

[[bin]]
name = "ginseng-cli"
path = "src/cli.rs"

[lib]
# The `_lib` suffix is important to avoid name conflicts with the main binary
# (see https://github.com/rust-lang/cargo/issues/8519
name = "ginseng_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
iroh = "0.94.0"
iroh-blobs = "0.96.0"
tokio = "1.48.0"
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.0"
